--- a/404.html
+++ b/404.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trillion Groups</title>
+    <title>TRILLION OIL AND GAS EQUIPMENT TRADING LLC</title>
+    <meta name="author" content="TRILLION OIL AND GAS EQUIPMENT TRADING LLC">
+    <meta name="description" content="Specializing in the trading of high-quality oil and gas equipment, including drilling rigs, pumps, valves, pipelines, and safety systems. We supply essential equipment to support exploration, extraction, and processing in the oil and gas industry." />
+    <meta name="description" content="Specializing in the trading of high-quality oil and gas equipment, including drilling rigs, pumps, valves, pipelines, and safety systems. We supply essential equipment to support exploration, extraction, and processing in the oil and gas industry." />
+
+    <link rel="icon" href="fav.png" type="image/x-icon">
 </head>
-<body>
-   <b>Trillion Groups</b>
-</body>
+<frameset rows="*,0" frameborder="no" border="0" framespacing="0">
+    <frame src="Trillion/404-page.html" name="mainFrame" id="mainFrame" title="mainFrame" />
+    
+  </frameset>
+  <noframes><body>
+  </body></noframes>
 </html>
