--- a/Trillion/index.html
+++ b/Trillion/index.html
@@ -16,6 +16,23 @@
 	<link rel="stylesheet" id="industris-style-css" href="style.css" type="text/css" media="all">
 
 	<link rel="shortcut icon" href="images/fav.png">
+
+	<script>
+        var isNS = (navigator.appName == "PN") ? 1 : 0;
+        if(navigator.appName == "PN") document.captureEvents(Event.MOUSEDOWN||Event.MOUSEUP);
+        function mischandler(){
+        return false;
+        }
+        function mousehandler(e){
+        var myevent = (isNS) ? e : event;
+        var eventbutton = (isNS) ? myevent.which : myevent.button;
+        if((eventbutton==2)||(eventbutton==3)) return false;
+        }
+        document.oncontextmenu = mischandler;
+        document.onmousedown = mousehandler;
+        document.onmouseup = mousehandler;
+        </script>
+
 </head>
 
 <body>
